# assignment_2-ShamrockLee

./: .gitignore  .gitmodules  Makefile.am  README.md  default.nix  flake.nix  meson.build  shell.nix
bourgeous_popen3_2011/: popen3.h  popen3_2011.c
include/: meson.build  myshogi.h  shogi_piecename2kanji_table.h
main/: Makefile.am  myshogi.c
src/: convert_step.c  errprinter.c  linked_list.c  meson.build  myshogi.c  translate_board.c
